--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,3 +44,12 @@ li {
 body {
     background-color: var(--light-color);
 }
+
+img {
+    width: 100%;
+}
+
+a {
+    color: var(--white-text);
+    text-decoration: none;
+}
