--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 :root {
-    --light-color: #b3c2f2;
-    --medium-color: #9000B3;
+    --light-color: #bfccf6;
+    --medium-color: #6883BA;
     --dark-color: #37000A;
     --white-text: azure;
     
@@ -15,6 +15,7 @@
 header {
     display: flex;
     justify-content: flex-start;
+    align-items: center;
     padding: 10px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: var(--medium-color);
@@ -24,6 +25,7 @@ header {
 h1.title {
     width: 50%;
     font-size: 40px;
+    padding-left: 10px;
 }
 
 nav {
@@ -52,4 +54,99 @@ img {
 a {
     color: var(--white-text);
     text-decoration: none;
+}
+
+.projects {
+    flex: 4;
+    padding: 50px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: flex-start;
+  }
+  
+  /* Added rotation, box-shadow, border-radius */
+  .card {
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 50px;
+    padding: 10px;
+    flex: 0 0 300px;
+    box-shadow: 10px 10px 5px #aaaaaa;
+    margin: 20px;
+  }
+  
+  /* Added border-radius to match the card */
+  .card header {
+    border-radius: 50px 50px 0px 0px;
+    padding: 20px;
+    display: flex;
+    justify-content: space-around;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 30px;
+  }
+  
+  .card img {
+    width: 100%;
+    border-radius: 0% 0% 50px 50px;
+  }
+
+footer {
+    display: flex;
+    justify-content: space-around;
+    padding: 10px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: var(--medium-color);
+    color: var(--white-text);
+    position: fixed;
+    bottom: 0px;
+    width: 100%
+}
+
+div.right img{
+    border-radius: 50%;
+    float: right;
+    width: auto;
+    height: 300px;
+    padding: 30px;
+}
+
+div.left {
+    background-color: var(--light-color);
+    float: left;
+    width: 50%;
+    height: 300px;
+    border-bottom: solid;
+    border-color: var(--medium-color);
+    padding: 1px;
+}
+
+div.right {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--light-color);
+    float: right;
+    width: 50%;
+    height: 300px;
+    border-bottom: solid;
+    border-color: var(--medium-color);
+}
+
+h2.intro {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: var(--light-color);
+    color: var(--white-text);
+    height: 100%;
+}
+
+div.me {
+    flex: 2;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: flex-start;
 }
