--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,15 @@
     padding: 0;
 }
 
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
+
 header {
     display: flex;
     justify-content: flex-start;
@@ -68,9 +77,9 @@ a {
   /* Added rotation, box-shadow, border-radius */
   .card {
     border-style: solid;
-    border-width: 1px;
+    border-width: 5px;
+    border-color: var(--medium-color);
     border-radius: 50px;
-    padding: 10px;
     flex: 0 0 300px;
     box-shadow: 10px 10px 5px #aaaaaa;
     margin: 20px;
@@ -78,7 +87,7 @@ a {
   
   /* Added border-radius to match the card */
   .card header {
-    border-radius: 50px 50px 0px 0px;
+    border-radius: 35px 35px 0px 0px;
     padding: 20px;
     display: flex;
     justify-content: space-around;
@@ -150,3 +159,4 @@ div.me {
     justify-content: space-evenly;
     align-items: flex-start;
 }
+
