--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,6 @@
 :root {
     --light-color: #bfccf6;
     --medium-color: #6883BA;
-    --dark-color: #37000A;
     --white-text: azure;
     
 }
@@ -21,7 +20,7 @@ html,body
     overflow-x: hidden; 
 }
 
-header {
+header.nav {
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -29,6 +28,8 @@ header {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: var(--medium-color);
     color: var(--white-text);
+    border-bottom: var(--light-color);
+    border-bottom: dotted;
 }
 
 h1.title {
@@ -93,6 +94,8 @@ a {
     justify-content: space-around;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 30px;
+    background-color: var(--medium-color);
+    color: var(--white-text);
   }
   
   .card img {
@@ -121,25 +124,21 @@ div.right img{
 }
 
 div.left {
-    background-color: var(--light-color);
     float: left;
     width: 50%;
     height: 300px;
-    border-bottom: solid;
-    border-color: var(--medium-color);
-    padding: 1px;
+    border-bottom: hidden;
 }
 
 div.right {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: var(--light-color);
     float: right;
     width: 50%;
     height: 300px;
-    border-bottom: solid;
-    border-color: var(--medium-color);
+    border-bottom: hidden;
+
 }
 
 h2.intro {
@@ -147,7 +146,6 @@ h2.intro {
     justify-content: center;
     align-items: center;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: var(--light-color);
     color: var(--white-text);
     height: 100%;
 }
@@ -158,5 +156,7 @@ div.me {
     flex-wrap: wrap;
     justify-content: space-evenly;
     align-items: flex-start;
+    background-image: linear-gradient(var(--medium-color), var(--medium-color), var(--light-color));
+    
 }
 
