--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,6 +21,8 @@ html,body
 }
 
 header.nav {
+    position: fixed;
+    width: 100%;
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -111,7 +113,7 @@ footer {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: var(--medium-color);
     color: var(--white-text);
-    position: fixed;
+    position: bottom;
     bottom: 0px;
     width: 100%
 }
@@ -157,6 +159,7 @@ div.me {
     justify-content: space-evenly;
     align-items: flex-start;
     background-image: linear-gradient(var(--medium-color), var(--medium-color), var(--light-color));
+    padding-top: 100px;
     
 }
 
