--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,10 +59,6 @@ body {
     background-color: var(--light-color);
 }
 
-img {
-    width: 100%;
-}
-
 a {
     color: var(--white-text);
     text-decoration: none;
@@ -89,7 +85,7 @@ a {
   }
   
   /* Added border-radius to match the card */
-  .card header {
+  /* .card header {
     border-radius: 40px 40px 0px 0px;
     padding: 20px;
     display: flex;
@@ -98,9 +94,9 @@ a {
     font-size: 30px;
     background-color: var(--medium-color);
     color: var(--white-text);
-  }
+  } */
   
-  .card img {
+.card img {
     width: 100%;
     vertical-align: bottom;
     border-radius: 0% 0% 45px 45px;
@@ -109,9 +105,10 @@ a {
 footer {
     display: flex;
     justify-content: space-around;
-    padding: 10px;
+    padding: 50px;
+    padding-top: 80px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: var(--medium-color);
+    background-image: linear-gradient(var(--light-color), var(--medium-color),var(--medium-color), var(--medium-color));
     color: var(--white-text);
     position: bottom;
     bottom: 0px;
@@ -150,6 +147,9 @@ h2.intro {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: var(--white-text);
     height: 100%;
+    padding: 50px;
+    text-align: center;
+    font-size: 25pt;
 }
 
 div.me {
@@ -163,3 +163,42 @@ div.me {
     
 }
 
+.project-description {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: var(--medium-color);
+    color: var(--white-text);
+}
+
+.project-description img {
+    max-height: 200px;
+    border-radius: 50%;
+}
+
+.project-description h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
+}
+
+.float-left {
+    float: left;
+    margin-right: 25px;
+}
+
+.float-right {
+    float: right;
+    margin-left: 25px;
+}
+
+section.card a {
+    border-radius: 40px 40px 0px 0px;
+    padding: 20px;
+    display: flex;
+    justify-content: space-around;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 30px;
+    background-color: var(--medium-color);
+    color: var(--white-text);
+}
