--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,7 @@
     --light-color: #bfccf6;
     --medium-color: #6883BA;
     --white-text: azure;
+    --font: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     
 }
 
@@ -27,7 +28,7 @@ header.nav {
     justify-content: flex-start;
     align-items: center;
     padding: 10px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: var(--font);
     background-color: var(--medium-color);
     color: var(--white-text);
     border-bottom: var(--light-color);
@@ -84,18 +85,6 @@ a {
     margin: 20px;
   }
   
-  /* Added border-radius to match the card */
-  /* .card header {
-    border-radius: 40px 40px 0px 0px;
-    padding: 20px;
-    display: flex;
-    justify-content: space-around;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 30px;
-    background-color: var(--medium-color);
-    color: var(--white-text);
-  } */
-  
 .card img {
     width: 100%;
     vertical-align: bottom;
@@ -107,7 +96,7 @@ footer {
     justify-content: space-around;
     padding: 50px;
     padding-top: 80px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: var(--font);
     background-image: linear-gradient(var(--light-color), var(--medium-color),var(--medium-color), var(--medium-color));
     color: var(--white-text);
     position: bottom;
@@ -144,7 +133,7 @@ h2.intro {
     display: flex;
     justify-content: center;
     align-items: center;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: var(--font);
     color: var(--white-text);
     height: 100%;
     padding: 50px;
@@ -167,7 +156,7 @@ div.me {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: var(--font);
     background-color: var(--medium-color);
     color: var(--white-text);
 }
@@ -197,7 +186,7 @@ section.card a {
     padding: 20px;
     display: flex;
     justify-content: space-around;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: var(--font);
     font-size: 30px;
     background-color: var(--medium-color);
     color: var(--white-text);
